--- a/Dockerfile-release
+++ b/Dockerfile-release
@@ -2,7 +2,9 @@ FROM alpine:latest
 
 ADD etcd /usr/local/bin/
 ADD etcdctl /usr/local/bin/
-RUN mkdir -p /var/etcd/
+
+ENV ETCD_DATA_DIR=/var/lib/etcd/
+RUN mkdir -p $ETCD_DATA_DIR
 
 EXPOSE 2379 2380
 
