--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,9 @@ addons:
   apt:
     packages:
     - libpcap-dev
+    - aspell
     - libaspell-dev
+    - hunspell
     - libhunspell-dev
 
 before_install:
