functional-test: add advance network failure cases
add more network failures such as packet corruption, reordering, loss, and network partition.

resolve #5614

--- a/tools/functional-tester/docker/Dockerfile
+++ b/tools/functional-tester/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 RUN apk update 
-RUN apk add -v iptables sudo
+RUN apk --update add iptables bash iproute2
 ADD bin/etcd-agent /
 ADD bin/etcd /
 ADD bin/etcd-tester /
