travis: Update fmt check gotools

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ addons:
 
 before_install:
  - go get -v github.com/chzchzchz/goword
- - go get -v honnef.co/go/simple/cmd/gosimple
- - go get -v honnef.co/go/unused/cmd/unused
+ - go get -v honnef.co/go/tools/cmd/gosimple
+ - go get -v honnef.co/go/tools/cmd/unused
 
 # disable godep restore override
 install:
