test: run 'staticcheck'
Signed-off-by: Gyu-Ho Lee <gyuhox@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ before_install:
  - go get -v github.com/chzchzchz/goword
  - go get -v honnef.co/go/tools/cmd/gosimple
  - go get -v honnef.co/go/tools/cmd/unused
+ - go get -v honnef.co/go/tools/cmd/staticcheck
 
 # disable godep restore override
 install:
