--- a/glide.yaml
+++ b/glide.yaml
@@ -51,8 +51,10 @@ import:
   version: f7ee69f31298ecbe5d2b349c711e2547a617d398
 - package: github.com/olekukonko/tablewriter
   version: a0225b3f23b5ce0cbec6d7a66a968f8a59eca9c4
-- package: github.com/mattn/go-runewidth/runewidth.go
+- package: github.com/mattn/go-runewidth
   version: v0.0.2
+  subpackages:
+  - runewidth.go
 - package: github.com/prometheus/client_golang
   version: v0.8.0
   subpackages:
@@ -113,3 +115,5 @@ import:
   version: 976c720a22c8eb4eb6a0b4348ad85ad12491a506
   subpackages:
   - assert
+- package: github.com/dgrijalva/jwt-go
+  version: v3.0.0
